git-svn-id: http://svn.vdombox.ru/flextools/trunk@8354 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
@@ -52,6 +52,7 @@ data_table_structure_commit = commit
 data_table_structure_discard = discard
 
 data_table_structure_delete_dialog = Remove: You might lose data! Do you really want to remove?
+data_table_structure_space_in_name_column_dialog = Error: using spaces in the column names is forbidden!
 
 # SearchBox
 
