--- a/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
@@ -52,6 +52,7 @@ data_table_structure_commit = Appliquer
 data_table_structure_discard = Annuler
 
 data_table_structure_delete_dialog = Attention les données vont être perdues, voulez-vous vraiment supprimer la table ?
+data_table_structure_space_in_name_column_dialog = Error: using spaces in the column names is forbidden!
 
 # SearchBox
 
