--- a/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
@@ -52,6 +52,7 @@ data_table_structure_commit = Отправить
 data_table_structure_discard = Отмена
 
 data_table_structure_delete_dialog = Удаление: Вы можете потерять данные! Вы действительно хотите удалить?
+data_table_structure_space_in_name_column_dialog = Ошибка: Запрещено использованиепробелов в названии столбцов!!!
 
 # SearchBox
 
