git-svn-id: http://svn.vdombox.ru/flextools/trunk@8363 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/ru_RU/LoginForm.properties
+++ b/IDE/v.02/core/locale/ru_RU/LoginForm.properties
@@ -1,9 +1,9 @@
 title = Введите логин и пароль
 username = Логин
 password = Пароль
+hostname = Адрес сервера
 language = Язык
 ok_button = Отправить
 quit_button = Выйти
 back_button = Назад
 save_button = Save
-
