--- a/IDE/v.02/core/locale/en_US/LoginForm.properties
+++ b/IDE/v.02/core/locale/en_US/LoginForm.properties
@@ -1,7 +1,7 @@
 title = Please enter your Username and Password below
 username = Username
 password = Password
-hostname = Server IP
+hostname = Server address
 language = Language
 ok_button = Connect
 quit_button = Exit
