Copy, paste and delete some objects and pages
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8368 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -118,6 +118,7 @@ toolset_button_label = WYSIWYG
 	
 		renderer_toolTip = Name: 
 		delete_Renderer = Are you sure want to delete 
+		elements = elements
 		
 	#ContextMenu
 	
