--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -121,6 +121,7 @@ toolset_button_label = WYSIWYG
 	
 		renderer_toolTip = Name: 
 		delete_Renderer = Etes-vous sur de vouloir supprimer l'élément
+		elements = elements
 		
 	#ContextMenu
 	
