--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -121,6 +121,7 @@ toolset_button_label = WYSIWYG
 	
 		renderer_toolTip = Имя: 
 		delete_Renderer = Вы уверены что хотите удалить 
+		elements = элементов
 		
 	#ContextMenu
 	
