git-svn-id: http://svn.vdombox.ru/flextools/trunk@8372 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -22,7 +22,7 @@ toolset_button_label = WYSIWYG
 
 	# ObjectAttributesPanel
 
-		object_attributes_panel_title = Object Properties
+		object_attributes_panel_title = Object properties
 		object_attributes_panel_save = Save
 		object_attributes_panel_delete = Delete
 		
@@ -37,11 +37,11 @@ toolset_button_label = WYSIWYG
 
 	#ObjectTreePanel
 
-		pages_panel_title = Pages
+		pages_panel_title = Objects tree
 		
 	#ToolBoxPanel
 
-	toolbox_panel_filter = Type Filter 
+	toolbox_panel_filter = Type filter 
 	toolbox_panel_types_found = Types found
 	toolbox_panel_user_category = Favorite
 	toolbox_panel_add_in_user = Add to Favorite
@@ -67,8 +67,8 @@ toolset_button_label = WYSIWYG
 
 		resource_selector_window_title = Resource browser
 		resource_selector_window_filter = Filter resource
-		resource_selector_window_total = Total Resources:
-		resource_selector_window_upload = Upload File...
+		resource_selector_window_total = Total resources:
+		resource_selector_window_upload = Upload file...
 		resource_selector_window_insert = Insert
 		
 	# SpinnerPopup
@@ -85,8 +85,8 @@ toolset_button_label = WYSIWYG
 		richtext_toolbar_style = Style
 		richtext_toolbar_font = Font
 		richtext_toolbar_size = Size
-		richtext_toolbar_text_color = Text Color
-		richtext_toolbar_fill_color = Fill Color
+		richtext_toolbar_text_color = Text color
+		richtext_toolbar_fill_color = Fill color
 		richtext_toolbar_source = Source
 		
 		richtext_toolbar_select_all = Select All
