--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -38,15 +38,15 @@ toolset_button_label = WYSIWYG
 
 	#ObjectTreePanel
 
-		pages_panel_title = Pages
+		pages_panel_title = Objects tree
 
 	#ToolBoxPanel
 
 	toolbox_panel_filter = Filtre
 	toolbox_panel_types_found = trouvé(s)
 	toolbox_panel_user_category = Favori
-	toolbox_panel_add_in_user = Ajouter aux favoris
-	toolbox_panel_del_in_user = Retirer des favoris
+	toolbox_panel_add_in_user = Ajouter aux Favoris
+	toolbox_panel_del_in_user = Retirer des Favoris
 
 
 
