--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -39,7 +39,7 @@ toolset_button_label = WYSIWYG
 
 	#ObjectTreePanel
 
-		pages_panel_title = Страницы
+		pages_panel_title = Дерево обьектов
 		
 	#ToolBoxPanel
 
@@ -114,7 +114,7 @@ toolset_button_label = WYSIWYG
 	
 		text_toolbar_font = Шрифт
 		text_toolbar_size = Размер
-		text_toolbar_text_color = Цвет Текста
+		text_toolbar_text_color = Цвет текста
 		
 				
 	#Renderer
