git-svn-id: http://svn.vdombox.ru/flextools/trunk@8375 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/locale/en_US/Tree_General.properties
+++ b/IDE/v.02/modules/Tree/locale/en_US/Tree_General.properties
@@ -6,12 +6,12 @@ toolset_button_label = Tree
 
 work_area_save = Save
 work_area_undo = Undo
-work_area_new_page = New Page
+work_area_new_page = New page
 work_area_auto_spacing = Autospacing
-work_area_expand_all = Expand All
-work_area_collapse_all = Collapse All
-work_area_show_signature = Show Signature
-work_area_hide_signature = Hide Signature
+work_area_expand_all = Expand all
+work_area_collapse_all = Collapse all
+work_area_show_signature = Show signature
+work_area_hide_signature = Hide signature
 
 #Menu Panel
 menu_panel_title = Menu
@@ -30,8 +30,8 @@ properties_panel_btn_delete = Delete
 #Levels Panel
 levels_panel_title = Levels
 
-level_show_all = Show All
-level_hide_all = Hide All
+level_show_all = Show all
+level_hide_all = Hide all
 
 level_0 = Level 0
 level_1 = Level 1
