git-svn-id: http://svn.vdombox.ru/flextools/trunk@8376 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
@@ -7,6 +7,7 @@ save = Save
 
 work_area_undo = Undo
 work_area_redo = Redo
+work_area_preferences = Preferences
 
 # Tabs Panel
 tabs_panel_title = Tabs
@@ -15,7 +16,7 @@ tabs_panel_title = Tabs
 containers_panel_title = Containers
 
 # ServerScripts Panel
-server_scripts_panel_title = Server Scripts
+server_scripts_panel_title = Server scripts
 server_scripts_panel_add = Add
 server_scripts_panel_delete = Delete
 
@@ -25,19 +26,19 @@ libraries_panel_add = Add
 libraries_panel_delete = Delete
 
 # GlobalScripts Panel
-global_scripts_panel_title = Global Scripts
+global_scripts_panel_title = Global scripts
 
 # FindBox
 find = Find
-replaceWith = Replace With
+replaceWith = Replace with
 replace = Replace
-replaceAll = replaceAll
+replaceAll = replace all
 
 # Create Action Window
-create_action_window_action_title = Add New Action
-create_action_window_library_title = Add New Library 
-create_action_window_description = Input Script Name:
-create_action_window_name_error_description = Please Input Correct Name
+create_action_window_action_title = Add new action
+create_action_window_library_title = Add new library 
+create_action_window_description = Input script name:
+create_action_window_name_error_description = Please input correct name
 
 #Other
-applications_scripts = Application Scripts
+applications_scripts = Application scripts
