--- a/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
@@ -7,6 +7,7 @@ save = Enregistrer
 
 work_area_undo = Undo
 work_area_redo = Redo
+work_area_preferences = Preferences
 
 # Tabs Panel
 tabs_panel_title = Tabs
@@ -15,7 +16,7 @@ tabs_panel_title = Tabs
 containers_panel_title = Conteneurs
 
 # ServerScripts Panel
-server_scripts_panel_title = Scripts Server
+server_scripts_panel_title = Scripts server
 server_scripts_panel_add = Ajouter
 server_scripts_panel_delete = Supprimer
 
