--- a/IDE/v.02/modules/Scripts/locale/ru_RU/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/ru_RU/Scripts_General.properties
@@ -7,6 +7,7 @@ save = Сохранить
 
 work_area_undo = Отмена
 work_area_redo = Повторить
+work_area_preferences = Настройки
 
 # Tabs Panel
 tabs_panel_title = Вкладки
