git-svn-id: http://svn.vdombox.ru/flextools/trunk@8377 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/locale/fr_FR/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/fr_FR/Events_General.properties
@@ -12,7 +12,7 @@ work_area_page = Page:
 
 # ObjectsTreePanel
 
-objects_tree_panel_title = PAGES
+objects_tree_panel_title = Objects tree
 
 # EventsPanel
 
