--- a/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
@@ -13,7 +13,7 @@ work_area_page = Страница:
 
 # ObjectsTreePanel
 
-objects_tree_panel_title = СТРАНИЦЫ
+objects_tree_panel_title = Дерево объектов
 
 # EventsPanel
 
