--- a/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
@@ -13,7 +13,7 @@ work_area_page = Page:
 
 # ObjectsTreePanel
 
-objects_tree_panel_title = PAGES
+objects_tree_panel_title = Objects tree
 
 # EventsPanel
 
