git-svn-id: http://svn.vdombox.ru/flextools/trunk@8378 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
@@ -1,6 +1,6 @@
 # Title
-title = DataBase
-toolset_button_label = DataBase
+title = Database
+toolset_button_label = Database
 
 # CreateNewObjectWindow
 
