--- a/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
@@ -1,6 +1,6 @@
 # Title
-title = DataBase
-toolset_button_label = DataBase
+title = Database
+toolset_button_label = Database
 
 # CreateNewObjectWindow
 
