git-svn-id: http://svn.vdombox.ru/flextools/trunk@8379 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/en_US/Core_General.properties
+++ b/IDE/v.02/core/locale/en_US/Core_General.properties
@@ -13,7 +13,7 @@ some = some
 	
 # ApplicationManagerWindow
 
-	application_manager_window_title = APP MANAGER
+	application_manager_window_title = Application manager
 	
 	change_application_add_new_application = Add new application
 	change_application_open_in_editor = Open
