--- a/IDE/v.02/core/locale/fr_FR/Core_General.properties
+++ b/IDE/v.02/core/locale/fr_FR/Core_General.properties
@@ -13,7 +13,7 @@ some = certains
 	
 # ApplicationManagerWindow
 
-	application_manager_window_title = APP MANAGER
+	application_manager_window_title = Application manager
 	
 	change_application_add_new_application = Ajouter une nouvelle application
 	change_application_open_in_editor = Ouvrir
