git-svn-id: http://svn.vdombox.ru/flextools/trunk@8381 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -13,7 +13,7 @@ toolset_button_label = WYSIWYG
 	
 	work_area_show_linking = Casser
 	
-	work_area_undo = Undo
+	work_area_undo = Retour
 	work_area_redo = Redo
 
 
