git-svn-id: http://svn.vdombox.ru/flextools/trunk@8383 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/locale/fr_FR/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/fr_FR/Events_General.properties
@@ -16,8 +16,8 @@ objects_tree_panel_title = Objects tree
 
 # EventsPanel
 
-events_panel_events_title = EVENEMENTS
-events_panel_actions_title = ACTIONS
+events_panel_events_title = Evenements
+events_panel_actions_title = Actions
 
 # ActionElementSkin
 
