--- a/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
@@ -17,8 +17,8 @@ objects_tree_panel_title = Дерево объектов
 
 # EventsPanel
 
-events_panel_events_title = СОБЫТИЯ
-events_panel_actions_title = ДЕЙСТВИЯ
+events_panel_events_title = События
+events_panel_actions_title = Действия
 
 # ActionElementSkin
 
