--- a/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
@@ -17,8 +17,8 @@ objects_tree_panel_title = Objects tree
 
 # EventsPanel
 
-events_panel_events_title = EVENTS
-events_panel_actions_title = ACTIONS
+events_panel_events_title = Events
+events_panel_actions_title = Actions
 
 # ActionElementSkin
 
