git-svn-id: http://svn.vdombox.ru/flextools/trunk@8384 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
@@ -15,7 +15,7 @@ renaem_table_window_title = Renommer la table
 
 # DataTableTree
 
-data_table_tree_new_context = Nouveau
+data_table_new_base = New base
 
 # DataTable
 
@@ -24,7 +24,6 @@ data_table_structure = Structure
 data_table_visual = Visuel
 data_table_sql_query = SQL query
 data_table_new_table = Nouvelle Table
-data_table_new_base = New base
 data_table_go_to_base = Aller à la base de données
 
 # DataTableQuery
@@ -61,3 +60,6 @@ search_box_search = Chercher
 # TableElement
 
 delete_table = Are you sure want to delete
+table_element_rename = Rename
+table_element_go_to_table = Go to table
+table_element_delete = Delete
