--- a/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
@@ -15,7 +15,7 @@ renaem_table_window_title = Переименование таблицы
 
 # DataTableTree
 
-data_table_tree_new_context = Новый
+data_table_new_base = Новая база
 
 # DataTable
 
@@ -24,7 +24,6 @@ data_table_structure = Структура
 data_table_visual = Редактор
 data_table_sql_query = SQL запрос
 data_table_new_table = Новая таблица
-data_table_new_base = Новая база
 data_table_go_to_base = К базе
 
 # DataTableQuery
@@ -61,3 +60,6 @@ search_box_search = Поиск
 # TableElement
 
 delete_table = Вы уверены что хотите удалить
+table_element_rename = Переименовать
+table_element_go_to_table = Перейти к таблице
+table_element_delete = Удалить
