--- a/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
@@ -15,7 +15,7 @@ renaem_table_window_title = Rename table
 
 # DataTableTree
 
-data_table_tree_new_context = New
+data_table_new_base = New base
 
 # DataTable
 
@@ -24,7 +24,6 @@ data_table_structure = Structure
 data_table_visual = Visual
 data_table_sql_query = SQL query
 data_table_new_table = New table
-data_table_new_base = New base
 data_table_go_to_base = Go to base
 
 # DataTableQuery
@@ -61,3 +60,6 @@ search_box_search = Search
 # TableElement
 
 delete_table = Are you sure want to delete
+table_element_rename = Rename
+table_element_go_to_table = Go to table
+table_element_delete = Delete
