git-svn-id: http://svn.vdombox.ru/flextools/trunk@8437 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -128,5 +128,6 @@ toolset_button_label = WYSIWYG
 		contextMenu_start = Set home
 		contextMenu_delete = Supprimer
 		contextMenu_copy = Copier
+		contextMenu_cut = Cut
 		contextMenu_paste = Coller
 
