--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -128,4 +128,5 @@ toolset_button_label = WYSIWYG
 		contextMenu_start = Сделать домашней
 		contextMenu_delete = Удалить
 		contextMenu_copy = Копировать
+		contextMenu_cut = Вырезать
 		contextMenu_paste = Вставить
