--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -125,4 +125,5 @@ toolset_button_label = WYSIWYG
 		contextMenu_start = Set home
 		contextMenu_delete = Delete
 		contextMenu_copy = Copy
+		contextMenu_cut = Cut
 		contextMenu_paste = Paste
