git-svn-id: http://svn.vdombox.ru/flextools/trunk@8471 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/en_US/Core_General.properties
+++ b/IDE/v.02/core/locale/en_US/Core_General.properties
@@ -33,8 +33,12 @@ some = some
 	iconchooser_cancel = Cancel
 	iconchooser_ok = Ок
 	
-# Other
+# AlertWindow
 
 	save_the_changes = Save the changes?
 	wanted = Attention!
 	error = Error!
+	error_no = No
+	error_Close = Close
+	error_cancel = Cancel
+	error_save = Save
