--- a/IDE/v.02/core/locale/fr_FR/Core_General.properties
+++ b/IDE/v.02/core/locale/fr_FR/Core_General.properties
@@ -31,8 +31,12 @@ some = certains
 	
 	iconchooser_cancel = Annuler
 	
-# Other
+# AlertWindow
 
 	save_the_changes = Sauvegarder les changements?
 	wanted = Necessaire!
 	error = Erreur!
+	error_no = No
+	error_Close = Close
+	error_cancel = Cancel
+	error_save = Save
