--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -33,8 +33,12 @@ some = другое
 	iconchooser_cancel = Отмена
 	iconchooser_ok = Ок
 	
-# Other
+# AlertWindow
 
 	save_the_changes = Сохранить изменения?
 	wanted = Внимание!
 	error = Ошибка!
+	error_no = Нет
+	error_Close = Закрыть
+	error_cancel = Отмена
+	error_save = Сохранить
