git-svn-id: http://svn.vdombox.ru/flextools/trunk@8475 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/fr_FR/Core_General.properties
+++ b/IDE/v.02/core/locale/fr_FR/Core_General.properties
@@ -15,17 +15,20 @@ some = certains
 
 	application_manager_window_title = Application manager
 	
-	change_application_add_new_application = Ajouter une nouvelle application
+	change_application_add_new_application = Ajouter
 	change_application_open_in_editor = Ouvrir
 	change_application_edit = Editer
 	
 	create_edit_application_name = Nom
 	create_edit_application_description = Description
 	create_edit_application_version = Version
-	create_edit_application_cancel = Annuler
+	create_edit_application_pages = Pages
+	create_edit_application_objects = Objects
+	create_edit_application_ok = Ok
+	create_edit_application_back = Back
 	create_edit_application_script_language = Langage de script
 	
-	iconchooser_select_icon = Choisir un icone
+	iconchooser_select_icon = Choisir un icone:
 	iconchooser_load_from_computer = Depuis un fichier
 	iconchooser_icon = Icone
 	
