--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -22,11 +22,13 @@ some = другое
 	create_edit_application_name = Имя
 	create_edit_application_description = Описание
 	create_edit_application_version = Версия
-	create_edit_application_save = Ок
-	create_edit_application_cancel = Отмена
+	create_edit_application_pages = Страниц
+	create_edit_application_objects = Объектов
+	create_edit_application_ok = Ok
+	create_edit_application_back = Назад
 	create_edit_application_script_language  = Язык скрипта
 		
-	iconchooser_select_icon = Стандартное
+	iconchooser_select_icon = Стандартное:
 	iconchooser_load_from_computer = Выбрать с копьютера
 	iconchooser_icon = Иконка
 	
