git-svn-id: http://svn.vdombox.ru/flextools/trunk@8481 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -130,3 +130,4 @@ toolset_button_label = WYSIWYG
 		contextMenu_copy = Копировать
 		contextMenu_cut = Вырезать
 		contextMenu_paste = Вставить
+		contextMenu_rename = Переименовать
