--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -127,3 +127,4 @@ toolset_button_label = WYSIWYG
 		contextMenu_copy = Copy
 		contextMenu_cut = Cut
 		contextMenu_paste = Paste
+		contextMenu_rename = Rename
