--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -130,4 +130,5 @@ toolset_button_label = WYSIWYG
 		contextMenu_copy = Copier
 		contextMenu_cut = Cut
 		contextMenu_paste = Coller
+		contextMenu_rename = Rename
 
