git-svn-id: http://svn.vdombox.ru/flextools/trunk@8517 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/en_US/Core_General.properties
+++ b/IDE/v.02/core/locale/en_US/Core_General.properties
@@ -41,6 +41,7 @@ some = some
 	wanted = Attention!
 	error = Error!
 	error_no = No
+	error_ok = Ok
 	error_Close = Close
 	error_cancel = Cancel
 	error_save = Save
