--- a/IDE/v.02/core/locale/fr_FR/Core_General.properties
+++ b/IDE/v.02/core/locale/fr_FR/Core_General.properties
@@ -40,6 +40,7 @@ some = certains
 	wanted = Necessaire!
 	error = Erreur!
 	error_no = No
+	error_ok = Ok
 	error_Close = Close
 	error_cancel = Cancel
 	error_save = Save
