--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -41,6 +41,7 @@ some = другое
 	wanted = Внимание!
 	error = Ошибка!
 	error_no = Нет
+	error_ok = Ok
 	error_Close = Закрыть
 	error_cancel = Отмена
 	error_save = Сохранить
