git-svn-id: http://svn.vdombox.ru/flextools/trunk@8521 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
@@ -32,11 +32,13 @@ global_scripts_panel_title = Global scripts
 find = Find
 replaceWith = Replace with
 replace = Replace
-replaceAll = replace all
+replaceAll = Replace all
+caseSensitive = Case sensitive
 
 # Create Action Window
 create_action_window_action_title = Add new action
 create_action_window_library_title = Add new library 
+rename_variable_window_action_title = Rename
 create_action_window_description = Input script name:
 create_action_window_name_error_description = Please input correct name
 
