--- a/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
@@ -33,10 +33,12 @@ find = Find
 replaceWith = Replace With
 replace = Replace
 replaceAll = replaceAll
+caseSensitive = Case sensitive
 
 # Create Action Window
 create_action_window_action_title = Ajouter une nouvelle action
-create_action_window_library_title = Ajouter une nouvelle librairie
+create_action_window_library_title = Ajouter une nouvelle librairie 
+rename_variable_window_action_title = Rename
 create_action_window_description = Saisir le nom du script:
 create_action_window_name_error_description = Veuillez saisir un nom correcte.
 
