--- a/IDE/v.02/modules/Scripts/locale/ru_RU/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/ru_RU/Scripts_General.properties
@@ -33,10 +33,12 @@ find = Найти
 replaceWith = Заменить на
 replace = Заменить
 replaceAll = Заменить все
+caseSensitive = Учитывать регистр
 
 # Create Action Window
 create_action_window_action_title = Добавить новый скрипт
-create_action_window_library_title = Добавить новую библиотеку
+create_action_window_library_title = Добавить новую библиотеку 
+rename_variable_window_action_title = Переименование
 create_action_window_description = Введите имя скрипта:
 create_action_window_name_error_description = Введите корректное имя скрипта
 
