git-svn-id: http://svn.vdombox.ru/flextools/trunk@8529 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
@@ -50,8 +50,10 @@ data_table_structure_delete = delete
 data_table_structure_commit = commit
 data_table_structure_discard = discard
 
-data_table_structure_delete_dialog = Remove: You might lose data! Do you really want to remove?
-data_table_structure_space_in_name_column_dialog = Error: using spaces in the column names is forbidden!
+data_table_structure_delete_dialog = You might lose data! Do you really want to remove?
+data_table_structure_delete_dialog_title = Remove
+data_table_structure_space_in_name_column_dialog = Using spaces in the column names is forbidden!
+data_table_structure_space_in_name_column_dialog_title = Error!
 
 # SearchBox
 
@@ -59,7 +61,8 @@ search_box_search = Search
 
 # TableElement
 
-delete_table = Are you sure want to delete
+delete_table = Delete table
+delete_Renderer = Are you sure want to delete?
 table_element_rename = Rename
 table_element_go_to_table = Go to table
 table_element_delete = Delete
