--- a/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
@@ -51,7 +51,9 @@ data_table_structure_commit = Отправить
 data_table_structure_discard = Отмена
 
 data_table_structure_delete_dialog = Удаление: Вы можете потерять данные! Вы действительно хотите удалить?
-data_table_structure_space_in_name_column_dialog = Ошибка: Запрещено использованиепробелов в названии столбцов!!!
+data_table_structure_delete_dialog_title = Удаление
+data_table_structure_space_in_name_column_dialog = Запрещено использование пробелов в названии столбцов!!!
+data_table_structure_space_in_name_column_dialog_title = Ошибка!
 
 # SearchBox
 
@@ -59,7 +61,8 @@ search_box_search = Поиск
 
 # TableElement
 
-delete_table = Вы уверены что хотите удалить
+delete_table = Удаление таблицы
+delete_Renderer = Вы уверены что хотите удалить?
 table_element_rename = Переименовать
 table_element_go_to_table = Перейти к таблице
 table_element_delete = Удалить
