--- a/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
@@ -51,7 +51,9 @@ data_table_structure_commit = Appliquer
 data_table_structure_discard = Annuler
 
 data_table_structure_delete_dialog = Attention les données vont être perdues, voulez-vous vraiment supprimer la table ?
-data_table_structure_space_in_name_column_dialog = Error: using spaces in the column names is forbidden!
+data_table_structure_delete_dialog_title = Remove
+data_table_structure_space_in_name_column_dialog = Using spaces in the column names is forbidden!
+data_table_structure_space_in_name_column_dialog_title = Error!
 
 # SearchBox
 
@@ -59,7 +61,8 @@ search_box_search = Chercher
 
 # TableElement
 
-delete_table = Are you sure want to delete
+delete_table = Delete table
+delete_Renderer = Are you sure want to delete?
 table_element_rename = Rename
 table_element_go_to_table = Go to table
 table_element_delete = Delete
