git-svn-id: http://svn.vdombox.ru/flextools/trunk@8530 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/en_US/Events_General.properties
@@ -35,3 +35,4 @@ event_element_delete = Delete
 
 delete_Renderer = Are you sure want to delete 
 save_the_changes = Save the changes?
+seve_the_changes_title = Save
