--- a/IDE/v.02/modules/Events/locale/fr_FR/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/fr_FR/Events_General.properties
@@ -34,4 +34,5 @@ event_element_delete = Supprimer
 
 delete_Renderer = Etes-vous sur de vouloir supprimer l'élément
 save_the_changes = Sauvegarder les changements?
+seve_the_changes_title = Sauvegarder
 
