--- a/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
+++ b/IDE/v.02/modules/Events/locale/ru_RU/Events_General.properties
@@ -35,3 +35,4 @@ event_element_delete = Удалить
 
 delete_Renderer = Вы уверены что хотите удалить
 save_the_changes = Сохранить изменения?
+seve_the_changes_title = Сохранение
