git-svn-id: http://svn.vdombox.ru/flextools/trunk@8532 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/ru_RU/ResourceBrowser_General.properties
@@ -24,3 +24,7 @@ info_area_size = Размер:
 
 resource_selector_window_upload = Загрузить файл...
 resource_selector_window_filter = Фильтр ресурсов
+
+#Alert
+delete_Renderer = Вы уверены что хотите удалить 
+delete_Resource = Удаление ресурса
