--- a/IDE/v.02/modules/ResourceBrowser/locale/en_US/ResourceBrowser_General.properties
+++ b/IDE/v.02/modules/ResourceBrowser/locale/en_US/ResourceBrowser_General.properties
@@ -24,3 +24,7 @@ info_area_size = Size:
 
 resource_selector_window_upload = Upload File...
 resource_selector_window_filter = Filter resource
+
+#Alert
+delete_Renderer = Are you sure want to delete 
+delete_Resource = Delete resource 
