git-svn-id: http://svn.vdombox.ru/flextools/trunk@8533 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/en_US/Scripts_General.properties
@@ -44,3 +44,8 @@ create_action_window_name_error_description = Please input correct name
 
 #Other
 applications_scripts = Application scripts
+
+#Alert
+delete_Renderer = Are you sure want to delete?
+delete_server_action = Delete server script
+delete_library = Delete library
