--- a/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
+++ b/IDE/v.02/modules/Scripts/locale/fr_FR/Scripts_General.properties
@@ -44,3 +44,8 @@ create_action_window_name_error_description = Veuillez saisir un nom correcte.
 
 #Other
 applications_scripts = Scripts de l'application
+
+#Alert
+delete_Renderer = Are you sure want to delete?
+delete_server_action = Delete server script
+delete_library = Delete library
