git-svn-id: http://svn.vdombox.ru/flextools/trunk@8536 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -121,6 +121,9 @@ toolset_button_label = WYSIWYG
 	
 		renderer_toolTip = Name: 
 		delete_Renderer = Etes-vous sur de vouloir supprimer l'élément
+		delete_Object = Delete object 
+		delete_Objects = Delete same objects 
+		delete_Resource = Delete resource 
 		elements = elements
 		
 	#ContextMenu
