--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -118,6 +118,9 @@ toolset_button_label = WYSIWYG
 	
 		renderer_toolTip = Name: 
 		delete_Renderer = Are you sure want to delete 
+		delete_Object = Delete object 
+		delete_Objects = Delete same objects 
+		delete_Resource = Delete resource 
 		elements = elements
 		
 	#ContextMenu
