git-svn-id: http://svn.vdombox.ru/flextools/trunk@8540 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -15,6 +15,7 @@ toolset_button_label = WYSIWYG
 	
 	work_area_undo = Retour
 	work_area_redo = Redo
+	work_area_refresh = Refresh
 
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
