--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -15,6 +15,7 @@ toolset_button_label = WYSIWYG
 	
 	work_area_undo = Отменить
 	work_area_redo = Повторить
+	work_area_refresh = Обновить
 
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
