--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -15,6 +15,7 @@ toolset_button_label = WYSIWYG
 	
 	work_area_undo = Undo
 	work_area_redo = Redo
+	work_area_refresh = Refresh
 
 # ------------------------------------------------------------------------------------------------------------------------------------------------------------------#
 # Panels
