--- a/IDE/v.02/core/locale/ru_RU/Core_General.properties
+++ b/IDE/v.02/core/locale/ru_RU/Core_General.properties
@@ -45,3 +45,5 @@ some = другое
 	error_Close = Закрыть
 	error_cancel = Отмена
 	error_save = Сохранить
+	
+	error_0_bytes = Нельзя загружать файлы размером 0 байт
