git-svn-id: http://svn.vdombox.ru/flextools/trunk@8547 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/locale/fr_FR/LoginForm.properties
+++ b/IDE/v.02/core/locale/fr_FR/LoginForm.properties
@@ -4,5 +4,6 @@ password = Mot de passe
 hostname = IP ou url du serveur
 language = Langue
 quit_button = Quitter
+cancel_button = Cancel
 back_button = En arriere
 save_button = Enregistrer
