--- a/IDE/v.02/core/locale/ru_RU/LoginForm.properties
+++ b/IDE/v.02/core/locale/ru_RU/LoginForm.properties
@@ -5,5 +5,6 @@ hostname = Адрес сервера
 language = Язык
 ok_button = Отправить
 quit_button = Выйти
+cancel_button = Отменить
 back_button = Назад
 save_button = Save
