--- a/IDE/v.02/core/locale/en_US/LoginForm.properties
+++ b/IDE/v.02/core/locale/en_US/LoginForm.properties
@@ -5,5 +5,6 @@ hostname = Server address
 language = Language
 ok_button = Connect
 quit_button = Exit
+cancel_button = Cancel
 back_button = Back
 save_button = Save
