--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -135,3 +135,4 @@ toolset_button_label = WYSIWYG
 		contextMenu_cut = Вырезать
 		contextMenu_paste = Вставить
 		contextMenu_rename = Переименовать
+		contextMenu_global_rename = Глобальное переименование
