--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -135,4 +135,5 @@ toolset_button_label = WYSIWYG
 		contextMenu_cut = Cut
 		contextMenu_paste = Coller
 		contextMenu_rename = Rename
+		contextMenu_global_rename = Global rename
 
