git-svn-id: http://svn.vdombox.ru/flextools/trunk@8679 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/en_US/DataBase_General.properties
@@ -41,14 +41,14 @@ data_table_editor_apply = apply
 data_table_editor_add_row = add row
 data_table_editor_delete_row = delete row
 data_table_editor_commit = commit
-data_table_editor_discard = discard
+data_table_editor_discard = refresh/discard
 
 # DataTableStructure
 
 data_table_structure_add = add
 data_table_structure_delete = delete
 data_table_structure_commit = commit
-data_table_structure_discard = discard
+data_table_structure_discard = refresh/discard
 
 data_table_structure_delete_dialog = You might lose data! Do you really want to remove?
 data_table_structure_delete_dialog_title = Remove
