--- a/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/fr_FR/DataBase_General.properties
@@ -41,14 +41,14 @@ data_table_editor_apply = appliquer
 data_table_editor_add_row = ajouter une ligne
 data_table_editor_delete_row = Supprimer une ligne
 data_table_editor_commit = Appliquer
-data_table_editor_discard = Annuler
+data_table_editor_discard = Refresh/Annuler
 
 # DataTableStructure
 
 data_table_structure_add = Ajouter
 data_table_structure_delete = Supprimer
 data_table_structure_commit = Appliquer
-data_table_structure_discard = Annuler
+data_table_structure_discard = Refresh/Annuler
 
 data_table_structure_delete_dialog = Attention les données vont être perdues, voulez-vous vraiment supprimer la table ?
 data_table_structure_delete_dialog_title = Remove
