--- a/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
+++ b/IDE/v.02/modules/DB/locale/ru_RU/DataBase_General.properties
@@ -41,14 +41,14 @@ data_table_editor_apply = ОК
 data_table_editor_add_row = Добавить
 data_table_editor_delete_row = Удалить
 data_table_editor_commit = Отправить
-data_table_editor_discard = Отмена
+data_table_editor_discard = Обновить/сброс
 
 # DataTableStructure
 
 data_table_structure_add = Добавить
 data_table_structure_delete = Удалить
 data_table_structure_commit = Отправить
-data_table_structure_discard = Отмена
+data_table_structure_discard = Обновить/Сброс
 
 data_table_structure_delete_dialog = Удаление: Вы можете потерять данные! Вы действительно хотите удалить?
 data_table_structure_delete_dialog_title = Удаление
