git-svn-id: http://svn.vdombox.ru/flextools/trunk@8727 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -58,12 +58,13 @@ toolset_button_label = WYSIWYG
 
 	# MultilineWindow
 
-		multiline_window_title = Multiline window
+		multiline_window_title = Многострочный текст
 		multiline_window_add_resource = Ресурсы
 		multiline_window_save = Сохранить
 
 	# ColorPickerWindow
 
+		color_picker_window_title = Выбор цвета
 		color_picker_window_use = Использовать
 
 	# ResourceSelectorWindow
@@ -110,6 +111,14 @@ toolset_button_label = WYSIWYG
 		richtext_toolbar_insert_unordered_list = Insert unordered list
 		richtext_toolbar_outdent = Outdent
 		richtext_toolbar_indent = Indent
+		
+	#HTML source editor
+	
+		html_source_editor_title = HTML редактор
+		html_source_editor_code = Код
+		
+	#Insert Link
+		insert_link_window_title = Вставка Сылки
 				
 	#TextToolBar
 	
