--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -62,6 +62,7 @@ toolset_button_label = WYSIWYG
 
 	# ColorPickerWindow
 
+		color_picker_window_title = Color picker
 		color_picker_window_use = Use
 
 	# ResourceSelectorWindow
@@ -108,6 +109,15 @@ toolset_button_label = WYSIWYG
 		richtext_toolbar_insert_unordered_list = Insert unordered list
 		richtext_toolbar_outdent = Outdent
 		richtext_toolbar_indent = Indent
+		
+	#HTML source editor
+	
+		html_source_editor_title = HTML source editor
+		html_source_editor_code = Code
+		
+	#Insert Link
+		insert_link_window_title = Insert Link
+		
 		
 	#TextToolBar
 	
