git-svn-id: http://svn.vdombox.ru/flextools/trunk@8798 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/en_US/Wysiwyg_General.properties
@@ -143,3 +143,4 @@ toolset_button_label = WYSIWYG
 		contextMenu_paste = Paste
 		contextMenu_rename = Rename
 		contextMenu_global_rename = Global rename
+		contextMenu_get_set = Generate Getter/Setter
