--- a/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/ru_RU/Wysiwyg_General.properties
@@ -145,3 +145,4 @@ toolset_button_label = WYSIWYG
 		contextMenu_paste = Вставить
 		contextMenu_rename = Переименовать
 		contextMenu_global_rename = Глобальное переименование
+		contextMenu_get_set = Создать Getter/Setter
