--- a/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
+++ b/IDE/v.02/modules/Wysiwyg/locale/fr_FR/Wysiwyg_General.properties
@@ -145,4 +145,4 @@ toolset_button_label = WYSIWYG
 		contextMenu_paste = Coller
 		contextMenu_rename = Rename
 		contextMenu_global_rename = Global rename
-
+		contextMenu_get_set = Generate Getter/Setter
