git-svn-id: http://svn.vdombox.ru/flextools/trunk@8826 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Preview/locale/en_US/Preview_General.properties
+++ b/IDE/v.02/modules/Preview/locale/en_US/Preview_General.properties
@@ -1,6 +1,6 @@
 # Title
-title = Scripts
-toolset_button_label = Browse
+title = Preview
+toolset_button_label = Preview
 ok = OK
 cancel = Cancel
 
