--- a/IDE/v.02/modules/Preview/locale/ru_RU/Preview_General.properties
+++ b/IDE/v.02/modules/Preview/locale/ru_RU/Preview_General.properties
@@ -1,6 +1,6 @@
 #Title
-title = Scripts
-toolset_button_label = Открыть
+title = Preview
+toolset_button_label = Предпросмотр
 ok = OK
 cancel = Отмена
 
