git-svn-id: http://svn.vdombox.ru/flextools/trunk@8893 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/core/locale/en_US/Core_General.properties
+++ b/IDE/core/locale/en_US/Core_General.properties
@@ -47,3 +47,5 @@ some = some
 	error_save = Save
 	
 	error_0_bytes = file must have > 0 bytes
+	
+	error_protected = The application is protected. You cannot edit it.
