--- a/IDE/core/locale/ru_RU/Core_General.properties
+++ b/IDE/core/locale/ru_RU/Core_General.properties
@@ -47,3 +47,5 @@ some = другое
 	error_save = Сохранить
 	
 	error_0_bytes = Нельзя загружать файлы размером 0 байт
+	
+	error_protected = Данное приложение защищено. Редактирование невозможно
