--- a/IDE/core/locale/fr_FR/Core_General.properties
+++ b/IDE/core/locale/fr_FR/Core_General.properties
@@ -46,3 +46,5 @@ some = certains
 	error_save = Save
 	
 	error_0_bytes = file must have > 0 bytes
+	
+	error_protected = The application is protected. You cannot edit it.
